--- a/style.css
+++ b/style.css
@@ -6,6 +6,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   min-height: 100vh;
   margin: 0;
+  background-color: lightblue;
+}
+
+#wrapper {
+  width: 500px;
+  margin: 0 auto;
+}
+
+#wrapper img {
+  width: 100%;
+  border: solid navy 2px;
+  border-radius: 10px;
 }
